# mern-context-crud-backend-rust

./: .gitignore  Cargo.toml
src/: initialize_env_variables.rs  main.rs
src/models/: cloudinary_response.rs  mod.rs  post_model.rs
src/repository/: mod.rs  mongodb_repository.rs  posts_repository.rs
src/routes/: mod.rs  posts_routes.rs
src/services/: mod.rs  upload_image_to_cloudinary.rs
