[package]
name = "mern-context-crud-backend-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
mongodb = "2.2.2"
dotenv = "0.15.0"
chrono = "0.4.19"
nanoid = "0.4.0"
sha256 = "1.0.3"
reqwest = { version = "0.11.11", features = ["multipart", "stream", "json"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
